IN DEVELOPMENT

bzr 0.11rc1  2006-09-18

  IMPROVEMENTS:

    * Knit files now wait to create their contents until the first data is
      added. The old code used to create an empty .knit and a .kndx with just
      the header. However, this caused a lot of extra round trips over sftp.
      This can change the time for ``bzr push`` to create a new remote branch
      from 160s down to 100s. This also affects ``bzr commit`` performance when
      adding new files, ``bzr commit`` on a new kernel-like tree drops from 50s
      down to 40s (John Arbash Meinel, #44692)

    * When an entire subtree has been deleted, commit will now report that
      just the top of the subtree has been deleted, rather than reporting
      all the individual items. (Robert Collins)

    * Commit performs one less XML parse. (Robert Collins)

    * ``bzr checkout`` now operates on readonly branches as well
      as readwrite branches. This fixes bug #39542. (Robert Collins)

    * ``bzr bind`` no longer synchronises history with the master branch.
      Binding should be followed by an update or push to synchronise the 
      two branches. This is closely related to the fix for bug #39542.
      (Robert Collins)

    * ``bzrlib.lazy_import.lazy_import`` function to create on-demand 
      objects.  This allows all imports to stay at the global scope, but
      modules will not actually be imported if they are not used.
      (John Arbash Meinel)

    * Support bzr:// and bzr+ssh:// urls to work with the new RPC-based
      transport which will be used with the upcoming high-performance smart
      server. The new command ``bzr serve`` will invoke bzr in server mode,
      which processes these requests. (Andrew Bennetts, Robert Collins, Martin
      Pool)

    * New command ``bzr version-info`` which can be used to get a summary
      of the current state of the tree. This is especially useful as part
      of a build commands. See ``doc/version_info.txt`` for more information 